[gd_scene load_steps=11 format=3 uid="uid://b1ega158uiio7"]

[ext_resource type="Script" path="res://scripts/UFO.gd" id="1_gyoq5"]

[sub_resource type="PrismMesh" id="PrismMesh_ndqnn"]

[sub_resource type="PlaneMesh" id="PlaneMesh_psiyx"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_xtboy"]
data = PackedVector3Array(0, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, -0.5, 0, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="Animation" id="Animation_bcnyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_syyxf"]
resource_name = "rotation"
length = 5.0
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array()
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_le5wm"]
_data = {
"RESET": SubResource("Animation_bcnyh"),
"rotation": SubResource("Animation_syyxf")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7bvut"]
albedo_color = Color(100, 0, 0.18, 1)

[sub_resource type="TorusMesh" id="TorusMesh_5lo4w"]
material = SubResource("StandardMaterial3D_7bvut")
inner_radius = 1.127

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80087"]
albedo_color = Color(0.22, 0.42, 100, 1)
metallic = 0.02
metallic_specular = 1.0

[node name="UFO" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0, 0, 0)
collision_mask = 2
script = ExtResource("1_gyoq5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PrismMesh_ndqnn")

[node name="target" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, -4, 0)
mesh = SubResource("PlaneMesh_psiyx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_xtboy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_le5wm")
}

[node name="checker" type="RayCast3D" parent="."]
target_position = Vector3(-12, -4, 0)
debug_shape_custom_color = Color(0.94328, 0.0730168, 0.04537, 1)
debug_shape_thickness = 5

[node name="reloading" type="Timer" parent="."]
one_shot = true

[node name="rings" type="CPUParticles3D" parent="."]
transform = Transform3D(-0.25, 0.937422, 0.242362, 0.0669873, 0.266456, -0.961516, -0.965926, -0.224144, -0.129409, -0.996959, 0, -1.50537e-07)
visibility_range_fade_mode = 1
emitting = false
amount = 20
mesh = SubResource("TorusMesh_5lo4w")
emission_colors = PackedColorArray(100, 0.01, 0.35, 1)
gravity = Vector3(41, -5, -21)
linear_accel_max = 100.0
angle_max = 720.0

[node name="rings2" type="CPUParticles3D" parent="."]
transform = Transform3D(-0.25, 0.937422, 0.242362, 0.0669873, 0.266456, -0.961516, -0.965926, -0.224144, -0.129409, -0.791768, 0, -1.19554e-07)
material_override = SubResource("StandardMaterial3D_80087")
visibility_range_fade_mode = 1
emitting = false
amount = 20
mesh = SubResource("TorusMesh_5lo4w")
emission_colors = PackedColorArray(100, 0.01, 0.35, 1)
gravity = Vector3(41, -5, -21)
linear_accel_max = 100.0
angle_max = 720.0

[node name="emiting" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="emit" type="Node3D" parent="."]
transform = Transform3D(-4.37115e-08, -0.5, -0.866025, 0, 0.866025, -0.5, 1, -2.18557e-08, -3.78552e-08, 0.0139021, -2.48864, 6.07677e-10)

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="reloading" to="." method="_on_reloading_timeout"]
[connection signal="timeout" from="emiting" to="." method="_on_emiting_timeout"]
